--- a/ML_Prototype_Classification.ipynb
+++ b/ML_Prototype_Classification.ipynb
@@ -871,6 +871,15 @@
     "df_ergebnis = df_ergebnis.drop(['index'], axis=1)\n",
     "df_ergebnis\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_ergebnis.to_csv('lernset_classified.csv')"
+   ]
   }
  ],
  "metadata": {
