--- a/Algorithmen.ipynb
+++ b/Algorithmen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,52 +21,53 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis"
+    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "names = [\n",
-    "    \"Nearest Neighbors\",\n",
-    "    \"Linear SVM\",\n",
-    "    \"RBF SVM\",\n",
-    "    \"Gaussian Process\",\n",
-    "    \"Decision Tree\",\n",
+    "    #\"Nearest Neighbors\",\n",
+    "    #\"Linear SVM\",\n",
+    "    #\"RBF SVM\",\n",
+    "    #\"Gaussian Process\",\n",
+    "    #\"Decision Tree\",\n",
     "    \"Random Forest\",\n",
-    "    \"Neural Net\",\n",
-    "    \"AdaBoost\",\n",
-    "    \"Naive Bayes\",\n",
-    "    \"QDA\",\n",
+    "    #\"Neural Net\",\n",
+    "    #\"AdaBoost\",\n",
+    "    #\"Naive Bayes\",\n",
+    "    #\"QDA\",\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifiers = [\n",
-    "    KNeighborsClassifier(3),\n",
-    "    SVC(kernel=\"linear\", C=0.025),\n",
-    "    SVC(gamma=2, C=1),\n",
-    "    GaussianProcessClassifier(1.0 * RBF(1.0)),\n",
-    "    DecisionTreeClassifier(max_depth=5),\n",
+    "    #KNeighborsClassifier(3),\n",
+    "    #SVC(kernel=\"linear\", C=0.025),\n",
+    "    #SVC(gamma=2, C=1),\n",
+    "    #GaussianProcessClassifier(1.0 * RBF(1.0)),\n",
+    "    #DecisionTreeClassifier(max_depth=5),\n",
     "    RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
-    "    MLPClassifier(alpha=1, max_iter=1000),\n",
-    "    AdaBoostClassifier(),\n",
-    "    GaussianNB(),\n",
-    "    QuadraticDiscriminantAnalysis(),\n",
+    "    #MLPClassifier(alpha=1, max_iter=1000),\n",
+    "    #AdaBoostClassifier(),\n",
+    "    #GaussianNB(),\n",
+    "    #QuadraticDiscriminantAnalysis(),\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,45 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nearest Neighbors score: 0.41550254316211765\n",
-      "Linear SVM score: 0.489003510280106\n",
-      "RBF SVM score: 0.4831291639802278\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Dominik\\anaconda3\\lib\\site-packages\\sklearn\\gaussian_process\\kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 1e-05. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gaussian Process score: 0.5034028225517587\n",
-      "Decision Tree score: 0.5828497743391361\n",
-      "Random Forest score: 0.5331327458987033\n",
-      "Neural Net score: 0.4059746400171932\n",
-      "AdaBoost score: 0.439859588795759\n",
-      "Naive Bayes score: 0.5622179239200515\n",
-      "QDA score: 0.5760441292356187\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Dominik\\anaconda3\\lib\\site-packages\\sklearn\\discriminant_analysis.py:878: UserWarning: Variables are collinear\n",
-      "  warnings.warn(\"Variables are collinear\")\n"
+      "Random Forest score: 0.5547675334909378\n",
+      "[[ 170   18    0]\n",
+      " [ 212 5762  770]\n",
+      " [  84 5131 1812]]\n"
      ]
     }
    ],
@@ -138,8 +111,10 @@
     "# iterate over classifiers\n",
     "for name, clf in zip(names, classifiers):\n",
     "    clf.fit(X_train, y_train)\n",
+    "    y_pred = clf.predict(X_test)\n",
     "    score = clf.score(X_test, y_test)\n",
-    "    print(name + ' score: ' + str(score))\n"
+    "    print(name + ' score: ' + str(score))\n",
+    "    print(metrics.confusion_matrix(y_test, y_pred))\n"
    ]
   },
   {
